--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,81 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding: 20px;
+  font-family: Inter, sans-serif;
+  height: 100vh;
+  background-color: #282D35;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.nav{
+nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  background-color: #21222A;
+  height: 90px;
+  padding: 30px 25px;
 }
 
-.nav-items {
-  list-style: none;
+.nav--logo_text, .nav--title {
+  margin: 0;
+}
+
+.nav__logo{
+  cursor: pointer;
   display: flex;
 }
 
-.nav-items > li{
-  padding: 10px;
+.nav--logo_text {
+  color: #61DAFB;
+  font-weight: 700;
+  font-size: 22px;
 }
 
-.nav > .nav-logo{
-  width: 40px;
+.nav--title {
+  color: #DEEBF8;
+  font-weight: 600;
+  margin-left: auto;
+}
+
+.nav--icon {
+  height: 30px;
+  margin-right: 7px;
+}
+
+
+main {
+  padding: 57px 27px;
+  color: white;
+
+  background-image: url('../public/img/react-icon-large.png');
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 15%;
+}
+
+.main--title {
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05em;
+}
+
+.main--facts {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.main--facts > li {
+  line-height: 19px;
+  padding-block: 10px;
+}
+
+.main--facts > li {
+  line-height: 19px;
+  padding-block: 10px;
+}
+
+.main--facts > li::marker {
+  font-size: 1.4rem;
+  color: #61DAFB;
 }
